# platanus-hack-25-team-17

./: .gitignore  API_ENDPOINTS.md  Dockerfile  README.md  docker-compose.yml  platanus-hack-project.json  project-description.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_22_0609-fffaef29b7be_initial_migration_with_users_invoices_.py  2025_11_22_1219-13c3745878ba_create_models.py  2025_11_22_1800-3db85614360b_add_description_to_item.py  2025_11_22_1804-be81b259ef2e_make_debtor_id_nullable.py  2025_11_22_2319-add_uuid_default_to_sessions.py  2025_11_22_2322-c9d7d3b42539_merge_branches.py  2025_11_23_0220-de530790e15b_add_payment_method_table.py  2025_11_23_0510-85725fff1a41_add_tables.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: invoices.py  items.py  payments.py  sessions.py  users.py
app/config/: settings.py
app/core/: logging.py
app/database/: __init__.py  database.py
app/database/crud/: __init__.py  base.py  invoice.py  item.py  payment.py  session.py  user.py
app/database/models/: __init__.py  invoice.py  item.py  payment.py  payment_method.py  session.py  user.py
app/database/sql/: debt_queries.py  invoice.py  payment.py  payment_methods.py  session.py  user.py
app/integrations/: kapso.py
app/logic/: collection_logic.py  message_receiver.py  message_sender.py
app/models/: kapso.py  payment_method_parsing.py  receipt.py  text_agent.py
app/routers/: deps.py
app/routers/webhooks/: kapso.py
app/services/: ocr_service.py  payment_method_agent.py
app/services/agent/: prompt.py
app/utils/: constants.py  messages.py
frontend/app/session/[sessionId]/: page.tsx
frontend/lib/: api.ts  mockData.ts
scripts/: __init__.py  init_db.py  make_fake_data  reset_database.py  test_crud_imports.py
tests/: conftest.py  test_crud.py  test_receipt_extraction.py
